<resources>
    <string name="app_name">Calculator</string>
    <string name="clear">AC</string>
    <string name="delete">Del</string>
    <string name="answer">Ans</string>
    <string name="squared">^2</string>
    <string name="multiply">x</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="equals">=</string>
    <string name="exponent">^</string>
    <string name="var">Var</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="input">Enter a Value</string>
    <string name="output">Output</string>

</resources>