<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4.3">


        <TextView
            android:id="@+id/input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/output"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="30dp"
            android:fontFamily="sans-serif"
            android:rotationX="0"
            android:text="@string/input"
            android:textAlignment="textEnd"
            android:textColor="@color/orange"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/output"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginEnd="30dp"
            android:textAlignment="textEnd"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:fontFamily="sans-serif"
            android:text="@string/output"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"/>
    </RelativeLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6.5"
        android:background="@drawable/tablebg"
        android:paddingTop="15dp"
        android:paddingBottom="15dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingHorizontal="20dp"
            android:paddingVertical="7dp">

            <Button
                android:id="@+id/clear"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:background="@drawable/buttons"
                android:text="@string/clear"
                android:textColor="@color/mint"
                android:textSize="20sp"
                android:textStyle="bold"
                android:onClick="clearB"/>

            <Button
                android:id="@+id/delete"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:background="@drawable/buttons"
                android:text="@string/delete"
                android:textAllCaps="false"
                android:textColor="@color/mint"
                android:textSize="20sp"
                android:textStyle="bold"
                android:onClick="deleteB"/>

            <Button
                android:id="@+id/answer"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:background="@drawable/buttons"
                android:text="@string/answer"
                android:textAllCaps="false"
                android:textColor="@color/mint"
                android:textSize="20sp"
                android:textStyle="bold"
                android:onClick="ansB"/>

            <Button
                android:id="@+id/squared"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/buttons"
                android:text="@string/squared"
                android:textColor="@color/orange"
                android:textSize="23sp"
                android:textStyle="bold"
                android:onClick="square"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingHorizontal="20dp"
            android:paddingVertical="7dp">

            <Button
                android:id="@+id/one"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:background="@drawable/buttons"
                android:text="@string/one"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="25sp"
                android:onClick="oneB"/>

            <Button
                android:id="@+id/two"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:background="@drawable/buttons"
                android:text="@string/two"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:onClick="twoB"/>

            <Button
                android:id="@+id/three"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:background="@drawable/buttons"
                android:text="@string/three"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:onClick="threeB"/>

            <Button
                android:id="@+id/multiply"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/buttons"
                android:text="@string/multiply"
                android:textColor="@color/orange"
                android:textSize="20sp"
                android:textStyle="bold"
                android:onClick="multiplyB"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingHorizontal="20dp"
            android:paddingVertical="7dp">

            <Button
                android:id="@+id/four"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:background="@drawable/buttons"
                android:text="@string/four"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:onClick="fourB"/>

            <Button
                android:id="@+id/five"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:background="@drawable/buttons"
                android:text="@string/five"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:onClick="fiveB"/>

            <Button
                android:id="@+id/six"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:background="@drawable/buttons"
                android:text="@string/six"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:onClick="sixB"/>

            <Button
                android:id="@+id/plus"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/buttons"
                android:text="@string/add"
                android:textColor="@color/orange"
                android:textSize="25sp"
                android:textStyle="bold"
                android:onClick="addB"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingHorizontal="20dp"
            android:paddingVertical="7dp">

            <Button
                android:id="@+id/seven"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:background="@drawable/buttons"
                android:text="@string/seven"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="25sp"
                android:onClick="sevenB"/>

            <Button
                android:id="@+id/eight"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:background="@drawable/buttons"
                android:text="@string/eight"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:onClick="eightB"/>

            <Button
                android:id="@+id/nine"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:background="@drawable/buttons"
                android:text="@string/nine"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:onClick="nineB"/>

            <Button
                android:id="@+id/subtract"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/buttons"
                android:text="@string/subtract"
                android:textColor="@color/orange"
                android:textSize="40sp"
                android:textStyle="bold"
                android:onClick="subtractB"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingHorizontal="20dp"
            android:paddingTop="7dp"
            android:paddingBottom="10dp">

            <Button
                android:id="@+id/variable"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:background="@drawable/buttons"
                android:text="@string/var"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:textColor="@color/mint"
                android:textStyle="bold"
                android:onClick="variableB"/>

            <Button
                android:id="@+id/zero"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:background="@drawable/buttons"
                android:text="@string/zero"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:onClick="zeroB"/>

            <Button
                android:id="@+id/exponent"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:textStyle="bold"
                android:background="@drawable/buttons"
                android:text="@string/exponent"
                android:textColor="@color/orange"
                android:textSize="25sp"
                android:onClick="carrotB"/>

            <Button
                android:id="@+id/equals"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/buttons"
                android:text="@string/equals"
                android:textColor="@color/orange"
                android:textSize="27sp"
                android:textStyle="bold"
                android:onClick="equalsB"/>
        </TableRow>
    </TableLayout>

</LinearLayout>